--- a/views/hard.mustache
+++ b/views/hard.mustache
@@ -14,8 +14,9 @@
   </head>
   <body>
     <div class="gallows">
-      
 
+      <h1>THIS IS HARD</h1>
+      <h1>{{theWord}}</h1>
     </div>
 
   </body>
