--- a/views/game.mustache
+++ b/views/game.mustache
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Easy</title>
+    <title>game</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -13,6 +13,31 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
+    <header>
+      <h3>You have {{guessesLeft}} remaining!!</h3>
+    </header>
+    <div class="main">
+      <section class="dashZone">
+        <div class="dashes">
+          
+        </div>
+      </section>
+      <section class="submitZone">
+        <div class="letterSubmit">
+          <form class="" action="/game" method="PUT">
+            <input type="text" name="guess" maxlength="1" value="" placeholder="Letter">
+            <button type="submit" >Submit</button>
+          </form>
+      </section>
+      <section class="spentZone">
+        <div class="spent">
+          <h3>Letters used: {{#letters}}<span>{{.}}</span>{{/letters}}</h3>
+        </div>
+      </section>
+
+
+    </div>
+
 
   </body>
 </html>
