--- a/views/lost.mustache
+++ b/views/lost.mustache
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>HangMan</title>
+    <title>Lost</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
@@ -13,30 +13,9 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
   <body>
-    <div class="home">
-      <div class="Intro">
-        <h1>Welcome to the GALLOWS!</h1>
-        <h3>If you wish to continue, select your level of difficulty...</h3>
-      </div>
-      <div class="buttons">
-        <div class="easy">
-          <button type="button" name="easy">EASY</button>
-        </div>
-        <div class="medium">
-          <button type="button" name="medium">MEDIUM</button>
-        </div>
-        <div class="hard">
-          <button type="button" name="button">HARD</button>
-        </div>
+    <h1>You lose!</h1>
+    <h3>The word was: {{theWord}} </h3>
 
-      </div>
-
-
-
-
-
-
-    </div>
-
+    
   </body>
 </html>
