--- a/views/game.mustache
+++ b/views/game.mustache
@@ -19,12 +19,12 @@
     <div class="main">
       <section class="dashZone">
         <div class="dashes">
-          
+
         </div>
       </section>
       <section class="submitZone">
         <div class="letterSubmit">
-          <form class="" action="/game" method="PUT">
+          <form class="" action="/game" method="POST">
             <input type="text" name="guess" maxlength="1" value="" placeholder="Letter">
             <button type="submit" >Submit</button>
           </form>
